--- a/src/helper-pages/hard-blocked.html
+++ b/src/helper-pages/hard-blocked.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div>
-      <span id="url">This page</span> has been blocked by the Redirector plugin.
+      <p>
+        <span id="url">This page</span> has been blocked by the Redirector plugin.
+      </p>
+      <p>
+        <button id="reload-url-btn">Retry</button>
+      </p>
     </div>
   </body>
 </html>
