--- a/src/helper-pages/soft-blocked.html
+++ b/src/helper-pages/soft-blocked.html
@@ -12,7 +12,7 @@
         <span id="url">This page</span> has been blocked by the Redirector plugin.
       </p>
       <p>
-        <button id="add-exception-btn">Deactivate rule for this session</button>
+        <button id="add-exception-btn">Deactivate rule for this window</button>
       </p>
     </div>
   </body>
