--- a/src/popup/pageaction/index.html
+++ b/src/popup/pageaction/index.html
@@ -4,6 +4,7 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <div id="display" style="padding: 0 5px">Redirect to ''?</div>
     <select id="which"></select>
     <button id="go-btn" style="text-align: center;">Go</button>
   </body>
