--- a/src/popup/browseraction/index.html
+++ b/src/popup/browseraction/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <script src="../../options/page/custom-elements/labeled-checkbox.js"></script>
     <script src="custom-elements/area.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
     <div>Control which redirects are active</div>
+    <button id="collapse-all-btn" style="width: 100%;">Toggle collapse for all areas</button>
     <div id="area-container"></div>
   </body>
 </html>
